# LSEat

./: .ftpconfig  .gitignore  .profile  CMakeLists.txt  Picard  README.md  client.c  fitxers.c  fitxers.h  main.c  makefile  shell.c  shell.h  types.h  utils.c  utils.h
Client/: Client.c  Client.h
Practica/: .gitignore  makefile
Practica/data/: data.c
Practica/modules/: shell.c  shell.h  socketUtils.h  types.h  utils.h
Practica/picard/: makefile  picard.c
Server/: Server.c  Server.h
Utilities/: basicUtils.c  basicUtils.h  client.c  servidor.c  socketUtils.c  socketUtils.h
data/: data.c
data/include/: connection.h  controller.h  dataController.h  dataStructure.h  interface.h  networkManager.h
data/src/: basic.c  connection.c  controller.c  dataController.c  dataStructure.c  interface.c
enterprise/: enterprise.c
enterprise/include/: basic.h  connection.h  controller.h  enterpriseController.h  menuStructure.h  networkManager.h  picardStructure.h
enterprise/managers/: connectionManager.c  networkManager.c  networkManager.h
enterprise/src/: basic.c  connection.c  controller.c  enterpriseController.c  menuStructure.c  networkManager.c  picardStructure.c
lib/include/: files.h  hash.h  llista.h  menuStructure.h  network.h  semaphore_v2.h  shell.h  utils.h
lib/includes/: files.h  socketUtils.h  types.h  utils.h
lib/src/: files.c  hash.c  llista.c  menuStructure.c  network.c  shell.c  utils.c  (+1 more)
modules/: files.c  files.h  fitxers.c  fitxers.h  shell.c  shell.h  shellManager.c  shellManager.h  socketUtils.c  types.h  utils.c  utils.h
picard/: picard.c
(+18 files in other folders)
